--- a/thesis.tex
+++ b/thesis.tex
@@ -18,8 +18,8 @@
 
 \frontmatter
 \include{title}
-\include{sec-i-disclaimer}
-\include{sec-ii-declaration}
+\include{sections/i-disclaimer}
+\include{sections/ii-declaration}
 
 % Contents pages (only in book mode)
 %
@@ -46,8 +46,8 @@
 \addcontentsline{toc}{chapter}{\listtablename}
 \listoftables\markboth{\listtablename}{\listtablename}
 
-\include{sec-iii-abstract}
-\include{sec-iv-acknowledgements}
+\include{sections/iii-abstract}
+\include{sections/iv-acknowledgements}
 
 % MAIN MATTER
 % ~~~~~~~~~~~
@@ -62,15 +62,13 @@
 \let\oldchapter\chapter
 \renewcommand{\chapter}[1]{\oldchapter{#1}\addthumb{#1}{}{white}{black}}
 
-% include three years of work...
-%
-\include{sec-1-introduction}
-\include{sec-2-background}
-\include{sec-3-design}
-\include{sec-4-implementation}
-\include{sec-5-optimisation}
-\include{sec-6-results}
-\include{sec-7-conclusion}
+\include{sections/01-introduction}
+\include{sections/02-background}
+\include{sections/03-design}
+\include{sections/04-implementation}
+\include{sections/05-optimisation}
+\include{sections/06-results}
+\include{sections/07-conclusion}
 
 % BACK MATTER
 % ~~~~~~~~~~~
