--- a/thesis.bib
+++ b/thesis.bib
@@ -631,7 +631,7 @@ number = {3},
 pages = {313--326}
 }
 
-@techreport{Bell:2008,
+@techreport{Bell:2008wc,
 author = {Bell, Nathan and Garland, Michael},
 title = {{Efficient Sparse Matrix-Vector Multiplication on CUDA}},
 year = {2008}
@@ -2166,7 +2166,7 @@ pages = {103--111},
 annote = {Describes bulk-synchronous task parallelism model. This is similar to the SPMD model, and is (similarly) strictly more powerful than the SIMD model.}
 }
 
-@inproceedings{Bell:2009,
+@inproceedings{Bell:2009bl,
 author = {Bell, Nathan and Garland, Michael},
 title = {{Implementing sparse matrix-vector multiplication on throughput-oriented processors}},
 booktitle = {Supercomputing `09: Proceedings of the 2009 Conference on High Performance Computing Networking, Storage and Analysis},
